src/test/ui/structs/struct-variant-privacy.stderr
error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy.rs:7:14
   |
LL | fn f(b: foo::Bar) {
   |              ^^^ private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/struct-variant-privacy.rs:2:5
   |
LL |     enum Bar {
   |     ^^^^^^^^

error[E0603]: enum `Bar` is private
  --> $DIR/struct-variant-privacy.rs:10:14
   |
LL |         foo::Bar::Baz { a: _a } => {}
   |              ^^^ private enum
   |
note: the enum `Bar` is defined here
  --> $DIR/struct-variant-privacy.rs:2:5
   |
LL |     enum Bar {
   |     ^^^^^^^^

error[E0603]: cannot match on a field named `a` of variant `Bar::Baz`, which is not accessible in current scope
  --> $DIR/struct-variant-privacy.rs:10:25
   |
LL |         foo::Bar::Baz { a: _a } => {}
   |                         ^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0603`.
